# homeprotect

./: .env.example  README.md  pyproject.toml
data/: sample_structured_insights.json
data/processed/: structured_insights.json
data/raw/: homeprotect_reviews.csv  upload_manifest.json
src/homeprotect_dash/: __init__.py  __main__.py  app.py  config.py  main.py
src/homeprotect_dash.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/homeprotect_dash/agent_instructions/: ingestion_agent_instructions.md  orchestrator_agent_instructions.md
src/homeprotect_dash/agents/: __init__.py  ingestion_agent.py  orchestrator_agent.py
src/homeprotect_dash/assets/: style.css
src/homeprotect_dash/components/: cards.py  tables.py
src/homeprotect_dash/data/: contracts.py  figures.py  loaders.py
src/homeprotect_dash/pages/: dashboard.py
src/homeprotect_dash/services/: __init__.py  genai_service.py  orchestrator_service.py
src/homeprotect_dash/tools/: __init__.py  csv_tool.py  insight_builder_tool.py  instruction_tool.py  manifest_tool.py
tests/: test_figures.py  test_loaders.py  test_tools_and_orchestration.py
